# ChangeLog for vmware overlay
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $ Id: $

  21 Nov 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  app-emulation/vmware-workstation-tools/vmware-workstation-tools-4.5.3-r1.e
  build,
  app-emulation/vmware-workstation-tools/vmware-workstation-tools-5.5.1-r2.e
  build,
  app-emulation/vmware-workstation-tools/vmware-workstation-tools-5.5.2.ebui
  ld,
  app-emulation/vmware-workstation-tools/vmware-workstation-tools-5.5.3.ebui
  ld:
  Added ANY_ANY to all of the vmware-workstation-tools ebuilds, so we don't
  unpack it, since they aren't listed in SRC_URI.

  21 Nov 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  app-emulation/vmware-esx-tools/vmware-esx-tools-3.0.1-r1.ebuild:
  Added ANY_ANY so we don't pull down the files, and changed dir to
  /opt/vmware/esx/tools instead of /opt/vmware/tools.

  21 Nov 2006; Chris Gianelloni <wolf31o2@gentoo.org> eclass/vmware.eclass:
  Moved CD fetching to src_unpack, so binary packages don't need the CD.

  21 Nov 2006; Chris Gianelloni <wolf31o2@gentoo.org> eclass/vmware.eclass:
  OK, unpack doesn't like absolute paths.

  21 Nov 2006; Chris Gianelloni <wolf31o2@gentoo.org> eclass/vmware.eclass:
  Yeah, should be CDROM_ROOT, not CD_ROOT.

  21 Nov 2006; Chris Gianelloni <wolf31o2@gentoo.org> eclass/vmware.eclass:
  Made sure we check the CD for MY_P.tar.gz when doing our unpack.

  21 Nov 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  app-emulation/vmware-esx-tools/vmware-esx-tools-3.0.1-r1.ebuild:
  Made sure we keep both sbin and bin for vmware-esx-tools.

  21 Nov 2006; Chris Gianelloni <wolf31o2@gentoo.org> ++,
  -app-emulation/vmware-workstation-tools/metadata.xml:
  Renamed 5.5.3 vmware-workstation-tools ebuild to match the other ebuilds.

  20 Nov 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  +app-emulation/vmware-workstation-tools/files/5.5.3/000_all_initd-scripts.
  patch:
  Added new 5.5.3 version of vmware-workstation-tools.
